--- a/XMLToObjectConvertor/XMLConverter.csproj
+++ b/XMLToObjectConvertor/XMLConverter.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogicLayer\Functions.cs" />
     <Compile Include="CreatePerson.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,7 +76,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="BusinessLogicLayer\Person.cs" />
+    <Compile Include="PersistentLayer\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataAccessLayer\XMLToObjDBDataSet.Designer.cs">
