--- a/XMLToObjectConvertor/App.config
+++ b/XMLToObjectConvertor/App.config
@@ -12,6 +12,7 @@
     </startup>
     <appSettings>
     <add key="ConvertedXMLPath" value="c:\MyTest\" />
-    <add key="LoggerFilePath" value="c:\MyTest\" />   
+    <add key="LoggerFilePath" value="c:\MyTest\" />
+    <add key="ConnectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Development\XMLConverter\XMLToObjectConvertor\DataAccessLayer\XMLToObjDB.mdf;Integrated Security=True;Connect Timeout=30" />
     </appSettings>
 </configuration>
